<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Harvest_Savior_Mobile-Dev</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk_ke_akun_kamu">Masuk ke Akun Kamu</string>
    <string name="masukkan_email_dan_password_kamu_untuk_masuk_ke_aplikasi_harvest_savior">Masukkan email dan password kamu untuk masuk ke aplikasi Harvest Savior</string>
    <string name="email">Email</string>
    <string name="gmail_com">*****@gmail.com</string>
    <string name="password">Password</string>
    <string name="hint_pw">••••••••</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="masuk">Masuk</string>
    <string name="email_hint">Email anda</string>
    <string name="tv_toPenjual">Klik disini untuk login sebagai penjual dan mulai berjualan diaplikasi Harvest Savior</string>
    <string name="pw_hint2">Kata sandi anda</string>
    <string name="daftarkan_akun_kamu">Daftarkan Akun Kamu</string>
    <string name="masukkan_nama_email_dan_password_untuk_mulai_menggunakan_aplikasi_harvest_savior">Masukkan nama, email, dan password untuk mulai menggunakan aplikasi Harvest Savior</string>
    <string name="hint_name">Kahfi Smith</string>
    <string name="nama_lengkap_anda">Nama lengkap anda</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="home">Home</string>
    <string name="deteksi">Deteksi</string>
    <string name="riwayat">Riwayat</string>
    <string name="ambil_photo">Ambil Photo</string>
    <string name="atau">Atau</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="take_picture">ambil gambar</string>
    <string name="swift_camera">swift camera</string>
    <string name="example_tanggal_riwayat">Senin 30 February · 01:32</string>
    <string name="example_info_riwayat_deteksi">Tomat terjangkit penyakit!</string>
    <string name="example_tv_riwayat_warning">Tindakan diperlukan</string>
    <string name="tv_welcome_home_petani">Selamat Datang,</string>
    <string name="pantau_kesehatan_tanamanmu_bersama_kami">Pantau kesehatan tanamanmu bersama kami</string>
    <string name="deteksi_terbaru">Deteksi Terbaru</string>
    <string name="rekomendasi_obat">Rekomendasi Obat</string>
    <string name="title">Title</string>
    <string name="description">Deskripsi</string>
    <string name="rp0">Rp0</string>
    <string name="riwayat_deteksi_bulan_ini_30">Riwayat deteksi bulan ini : 30</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="tomat_kamu_terjangkit_penyakit">Tomat kamu terjangkit penyakit!</string>
    <string name="tindakan_diperlukan">Tindakan diperlukan!</string>
    <string name="tv_waktu_hasil_deteksi">Hari ini · 12:30</string>
    <string name="detail_obat">Detail Obat</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="harga_obat">Rp100000</string>
    <string name="stok">Stok</string>
    <string name="nilai_stok_obat">100</string>
    <string name="detail_toko">Detail Toko</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="nilai_noHp">08000000000</string>
    <string name="alamat">Alamat</string>
    <string name="nilai_alamat">Jl. Raya Cipanas No. 120, Cipanas, Cianjur, Jawa Barat</string>
    <string name="telfon_toko">Telfon Toko</string>
    <string name="masuk_ke_akun_penjual_anda">Masuk ke Akun Penjual Anda</string>
    <string name="klik_disini_untuk_login_sebagai_petani">Klik disini untuk login sebagai petani</string>
    <string name="nomor">Nomor</string>
    <string name="nomor_aktif_anda">Nomor aktif anda</string>
    <string name="hint_nomor">08**********</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="alamat_toko_anda">Alamat toko anda</string>
    <string name="nama_toko_anda">Nama toko anda</string>
    <string name="manajemen_stok_obatmu_disini">Manajemen stok obatmu disini</string>
    <string name="produk_obat">Produk Obat</string>
    <string name="ubah">Ubah</string>
    <string name="tambah_produk_obat">Tambah Produk Obat</string>
    <string name="hint_nama_obat">Fungisida</string>
    <string name="deskripsi_obat">Deskripsi Obat</string>
    <string name="untuk_mengendalikan_penyakit_seperti_nopatek_dan_sidazeb">Untuk mengendalikan penyakit, seperti NOPATEK dan Sidazeb</string>
    <string name="tv_hargaObat">Harga Obat</string>
    <string name="simpan">Simpan</string>
    <string name="edit_produk_obat">Edit Produk Obat</string>
    <string name="tambah_obat">Tambah Obat</string>
    <string name="invalid_email_error">Email tidak valid</string>
    <string name="login_needInput">Isi semua input</string>
    <string name="error_password_length">Panjang kata sandi harus lebih dari 8 karakter</string>
    <string name="emailHint">Masukan email</string>
    <string name="error_regist_allnull">Semua masukan harus diisi</string>
    <string name="confirmPw_hint">Masukan konfirmasi kata sandi</string>
    <string name="name_hint">Masukan nama anda</string>
    <string name="error_confirm_password">Konfirmasi kata sandi tidak sama</string>
    <string name="keluar">Keluar</string>
    <string name="produk_obat_anda_kosong">Produk Obat Anda Kosong</string>
    <string name="ubah_gambar">Ubah Gambar</string>
    <string name="buka_galeri">Buka Galeri</string>
    <string name="penyakit_yang_dipilih_akan_muncul_di_sini">Penyakit yang dipilih akan muncul di sini</string>
    <string name="obat_untuk_penyakit">Obat untuk Penyakit</string>
    <string name="tokopedia_com">Tokopedia.com</string>
    <string name="link_e_commerce_jika_ada">Link E-commerce Jika Ada</string>


</resources>