<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".lib.petani.login_petani_activity.view.LoginPetaniActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk_ke_akun_kamu"
        android:textSize="30sp"
        android:textColor="@color/gray700"
        android:fontFamily="@font/abelregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_email_dan_password_kamu_untuk_masuk_ke_aplikasi_harvest_savior"
        android:textSize="18sp"
        android:textColor="@color/gray500"
        android:fontFamily="@font/abelregular"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="@color/gray700"
        android:fontFamily="@font/abelregular"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:startIconDrawable="@drawable/message_35"
        app:placeholderText="@string/gmail_com"
        app:placeholderTextAppearance="@style/PlaceholderStyle"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="@color/gray500"
            android:fontFamily="@font/interregular"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/gray700"
        android:fontFamily="@font/abelregular"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tl_email"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:startIconDrawable="@drawable/lock_1"
        app:placeholderText="@string/hint_pw"
        app:placeholderTextAppearance="@style/PlaceholderStyle"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/pw_hint2"
            android:textColor="@color/gray500"
            android:fontFamily="@font/interregular"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_memiliki_akun"
        android:textSize="18sp"
        android:textColor="@color/blue1"
        android:fontFamily="@font/abelregular"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tl_pw"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_login_petani"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/masuk"
        android:fontFamily="@font/abelregular"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_daftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.harvest_savior_mobile_dev.lib.customView.MyClickableTextView
        android:id="@+id/tv_toPenjual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_toPenjual"
        android:textSize="18sp"
        android:textColor="@color/gray500"
        android:fontFamily="@font/abelregular"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>