<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".lib.penjual.daftar_penjual_activity.view.DaftarPenjualActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftarkan_akun_kamu"
            android:textSize="30sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_nama_email_dan_password_untuk_mulai_menggunakan_aplikasi_harvest_savior"
            android:textSize="18sp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_nama_toko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textSize="18sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nama_toko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/shopping_bag"
            app:placeholderText="Toko Obat Pertanian Tani Jaya"
            app:placeholderTextAppearance="@style/PlaceholderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_toko"
            app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama_toko"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/nama_toko_anda"
                android:textColor="@color/gray500"
                android:fontFamily="@font/interregular"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_alamat_penjual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_toko"
            android:textSize="18sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tl_nama_toko"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_alamat_penjual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_alamat_penjual"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/home"
            app:placeholderText="Jl. Raya Cipanas No. 120, Cipanas, Cianjur, Jawa Barat"
            app:placeholderTextAppearance="@style/PlaceholderStyle"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_alamat_penjual"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:hint="@string/alamat_toko_anda"
                android:textColor="@color/gray500"
                android:fontFamily="@font/interregular"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tl_alamat_penjual"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/message_35"
            app:placeholderText="@string/gmail_com"
            app:placeholderTextAppearance="@style/PlaceholderStyle"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:textColor="@color/gray500"
                android:fontFamily="@font/interregular"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_nomor_penjual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor"
            android:textSize="18sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tl_email"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nomor_penjual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_nomor_penjual"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/phone"
            app:placeholderText="@string/hint_nomor"
            app:placeholderTextAppearance="@style/PlaceholderStyle"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nomor_penjual"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:hint="@string/nomor_aktif_anda"
                android:textColor="@color/gray500"
                android:fontFamily="@font/interregular"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tl_nomor_penjual"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_pw_penjual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/lock_1"
            app:placeholderText="@string/hint_pw"
            app:placeholderTextAppearance="@style/PlaceholderStyle"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pw_penjual"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/pw_hint2"
                android:textColor="@color/gray500"
                android:fontFamily="@font/interregular"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirmPw_penjual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi_password"
            android:textSize="18sp"
            android:textColor="@color/gray700"
            android:fontFamily="@font/abelregular"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tl_pw_penjual"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_confirmPw_penjual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_confirmPw_penjual"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:startIconDrawable="@drawable/lock_1"
            app:placeholderText="@string/hint_pw"
            app:placeholderTextAppearance="@style/PlaceholderStyle"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirmPw_penjual"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/konfirmasi_password"
                android:textColor="@color/gray500"
                android:fontFamily="@font/interregular"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register_penjual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:fontFamily="@font/abelregular"
            android:textSize="18sp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/tl_confirmPw_penjual"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>