<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".lib.petani.detail_obat_activity.view.DetailObatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_obat"
            android:fontFamily="@font/abelregular"
            android:textSize="24sp"
            android:textColor="@color/gray700"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_obat"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:background="@color/green2"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_nama_obat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_obat"
            android:fontFamily="@font/abelregular"
            android:textSize="24sp"
            android:textColor="@color/gray700"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_obat"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_harga_obat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_obat"
            android:fontFamily="@font/intersemibold"
            android:textSize="18sp"
            android:textColor="@color/green1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/iv_obat"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_label_stok_obat"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/stok"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_obat"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_nilai_stok_obat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_stok_obat"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/green1"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_obat"
            app:layout_constraintStart_toEndOf="@id/tv_label_stok_obat"/>

        <TextView
            android:id="@+id/tv_label_deskripsi_obat"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_stok_obat"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_nilai_deskripsi_obat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_stok_obat"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/green1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:maxLines="5"
            app:layout_constraintTop_toBottomOf="@id/tv_label_stok_obat"
            app:layout_constraintStart_toEndOf="@id/tv_label_deskripsi_obat"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_detailObat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_label_deskripsi_obat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_DetailToko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_toko"
            android:fontFamily="@font/abelregular"
            android:textSize="24sp"
            android:textColor="@color/gray700"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/divider_detailObat"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_namaToko"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/green2"
            style="@style/CustomCardViewNamaToko"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_DetailToko"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <TextView
                android:id="@+id/tv_namaToko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/nama_toko"
                android:fontFamily="@font/intersemibold"
                android:textColor="@color/green1"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_label_noHp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="Nomor"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/cv_namaToko"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_nilai_noHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_noHp"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/green1"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/cv_namaToko"
            app:layout_constraintStart_toEndOf="@id/tv_label_noHp"/>

        <TextView
            android:id="@+id/tv_label_Alamat"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/gray500"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_noHp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_nilai_alamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nilai_alamat"
            android:fontFamily="@font/interregular"
            android:textSize="16sp"
            android:textColor="@color/blue1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nilai_noHp"
            app:layout_constraintStart_toEndOf="@id/tv_label_Alamat"
            app:layout_constraintEnd_toEndOf="@id/cv_namaToko"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_callToko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/phone"
            style="@style/CustomFloatButtonCallToko"
            android:backgroundTint="@color/green1"
            android:contentDescription="@string/telfon_toko" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>